--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/app.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch ./src/app.js"
+    "dev": "node --watch ./src/app.js",
+    "start": "node ./src/app.js"
   },
   "keywords": [],
   "author": "",
