--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./src/app.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch ./src/app.js",
     "start": "node ./src/app.js",
+    "start:dev": "node --watch ./src/app.js",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write ."
   },
